# HomeSite

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.gateway  alembic.ini  pyproject.toml  sensors.db-shm  sensors.db-wal
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: auth.py  catalog.py  charts.py  events.py  internal.py  sensors.py  settings.py  ws.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/db/: __main__.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  base.py  config.py  event.py  heating.py  pending_sensor.py  sensor.py  user.py
backend/app/repositories/: catalog_repository.py  chart_repository.py  sensor_repository.py  settings_repository.py  user_repository.py
backend/app/schemas/: auth.py  catalog.py  chart.py  event.py  sensor.py  settings.py
backend/app/services/: auth_service.py  backup_service.py  catalog_service.py  chart_service.py  gateway_client.py  health_monitor.py  pza.py  sensor_service.py  settings_service.py
backend/device_gateway/: __init__.py  __main__.py  api.py  config.py  config_db.py  dispatcher.py  handler.py  publisher.py
backend/scripts/: migrate_sqlite_to_pg.py  migrate_v1.py
backend/tests/: conftest.py  test_auth.py  test_gateway_api.py  test_gateway_dispatcher.py  test_gateway_handler.py  test_models.py  test_sensors_api.py  test_settings_api.py  test_websocket.py
backend/tools/: esp32_emulator.py
(+144 files in other folders)
